2006-01-22  Lluis Sanchez Gual <lluis@novell.com>

	* MonoDevelop.Dock/DockObject.cs: Store object properties
	in a hasthable to speed-up property access.
	* MonoDevelop.Dock/DockLayout.cs: Avoid unnecessary layout
	change events while loading a layout.

2005-08-20  John Luke  <john.luke@gmail.com>

	* DockItem.cs: fix some warnings with the new
	gtk#

2005-08-10  Ben Motmans  <ben.motmans@gmail.com>

	* MonoDevelop.Dock.mdp: references update

2005-06-27  John Luke  <john.luke@gmail.com>

	* DockLayout.cs: Save part of placeholders support
	
2005-06-27  John Luke  <john.luke@gmail.com>

	* DockLayout.cs: catch exception on invalid XML
	(SetupObject) guard against missing name attribute
	part of bug #75289, based on patch from
	Matthew Wright <matthew@willowgreen.f2s.com>

2005-06-04  John Luke  <john.luke@gmail.com>

	* DockPaned.cs: handle Shift|F8 to avoid crash for now
	* GdlDockTest.cs: remove C# 2 features

2005-04-28  John Luke  <john.luke@gmail.com>

	* DockBar.cs: remove redundent RemoveItem call
	* DockItem.cs: remove redundent LayoutChanged event
	
2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-16  John Luke  <john.luke@gmail.com>

	* DockItem.cs:
	* Dock.cs:
	* DockItemGrip.cs:
	* DockNotebook.cs:
	* DockPaned.cs: use ForAll overload that takes a Callback
	* DockMaster.cs: remove unused field

2005-04-06  John Luke  <john.luke@gmail.com>

	* MonoDevelop.Dock.mdp:
	* MonoDevelop.Dock.mds: add project files

2005-03-31  John Luke  <john.luke@gmail.com>

	* DockPaned.cs: only emit layout_changed when
	the position has changed and on button release

2005-03-31  John Luke  <john.luke@gmail.com>

	* *.cs: add license headers
	* TODO: update

2005-03-29  Alp Toker  <alp@atoker.com>

	* DockPaned.cs: make the central pane resize rather than the edge
	panes

2005-03-24  John Luke  <john.luke@gmail.com>

	* DockLayout.cs (UpdateItemsModel): reduce chances of being stuck