@@ -23,6 +23,7 @@
  */
 using System;
 using System.Xml;
+using Mono.Unix;
 using Gtk;
 
 namespace Gdl
@@ -757,12 +758,12 @@ namespace Gdl
 				menu.AttachToWidget (this, new MenuDetachFunc (DetachMenu));
 				
 				// Hide menuitem
-				MenuItem mitem = new MenuItem ("Hide");
+				MenuItem mitem = new MenuItem (Catalog.GetString("Hide"));
 				mitem.Activated += new EventHandler (ItemHideCb);
 				menu.Append (mitem);
 
 				// Lock menuitem
-				CheckMenuItem citem = new CheckMenuItem ("Lock");
+				CheckMenuItem citem = new CheckMenuItem (Catalog.GetString("Lock"));
 				citem.Active = this.Locked;
 				citem.Toggled += new EventHandler (ItemLockCb);
 				menu.Append (citem);
